src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-dwU-dhP0.5-wfsAN-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\ndefault column width: U\ndefault window height: P0.5\nwant fullscreen: AN\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1 × 336, bounds: 1239 × 688, states: [Activated]
